# nishan-e-sarak

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/nshn/: args.h  hough.h  io.h
src/: args.cpp  hough.cpp  io.cpp  main.cpp
